--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,18 +12,22 @@ code {
     monospace;
 }
 
-body{
-  width: 100%;
+.nav-bar{
+  background-color: rgb(20, 114, 74);
+  padding: 5px;
 }
 .main-page-div{
   width: 100%;
+  height: 100% !important;
+  background-color: brown;
+
 }
 
 .main-div{
-  background-color: rgba(247, 246, 245, 0.996);
+  background-color: rgba(193, 109, 25, 0.996);
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100% !important;
 }
 .main-div-sub{
   background-color: rgba(34, 185, 185, 0.65);
@@ -31,23 +35,24 @@ body{
   border: solid greenyellow;
   border-radius: 10px;
   justify-content: center;
-
-  
-
 }
 
-.link-link{
-  background-color: rgb(242, 246, 244);
-  border: none;
-}
+
 .main-div-sub-list{
   width: 90%;
   height: 100%;
 }
  
 .member-list{
-  width: 30%;
+  width: 30vh;
   background-color: blueviolet;
+}
+.member-details{
+  background-color: red;
+}
+.memeber-detail-parent{
+  width: 100%;
+  background-color: yellow;
 }
 .member-add-button{
   display: flex;
@@ -65,8 +70,9 @@ a {
 
 .sup-div{
   display: flex;
-  background-color: gray;
+  background-color: rgb(60, 38, 138);
   width: 100%;
+  height: 100%;
 /*------------- Line -----------------*/
   background-image: linear-gradient(
     to right,
