--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,8 +36,19 @@ code {
   border-radius: 10px;
   justify-content: center;
 }
-
-
+.item-pointer{
+  display: block;
+  cursor: pointer;
+  text-align: left;
+  margin: 5px;
+  width: 100%;
+  font-size: 15px;
+  
+}
+.item-pointer:hover{
+  background-color: rgba(250, 235, 215, 0.152);
+  text-shadow: 1px 2px 1px #01011d;
+}
 .main-div-sub-list{
   width: 90%;
   height: 100%;
