--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #103d97;
+  background-color: #3862b5be;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
