--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   height: 100%;
+  width: 100%;
 }
 
 .App-logo {
@@ -15,15 +16,16 @@
 }
 
 .App-header {
-  background-color: #3862b5be;
-  min-height: 100vh;
+  background-color: #8998b7be;
+  min-height: 100vh !important;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(112, 38, 38);
   height: 100vh;
+  width: 100vh !important;
 }
 
 .App-link {
